2005-xx-xx v0.xx:
  * Add --bindaddr and corresponding config file options to specify address to connect from.
  * Allow -fomit-frame-pointer on gcc versions >= 3.3.1. (Frederick Bruckman, me)

2004-12-20 v0.27.1:
  * Fix error in configure script when printing exceptions not found message, due to unquoted string. (Reported by M.J. Soft)
  * Fix -G* when NGETCACHE != NGETHOME. (Reported by Steven Adeff)
  * Fix midinfo and newsgroups files not honoring NGETCACHE/cachedir setting. (Reported by Christian Marillat)
  * Allow absolute paths in --text=mbox:<filename>. (Requested by Volker Wysk)
  * Support tab as the field separator in XPAT results, for Newsplex server support.  (Requested by Mark Blain)
  * -a no longer gives an error if the server doesn't support LIST NEWSGROUPS(which retrieves newsgroup descriptions.)
  * Fix printing a warning when loading newsgroups list which contains descriptions of groups which no server actually carries. (Reported by Frederick Bruckman)
  * Fix problems loading group descriptions from newsgroups list which contain tabs. (Reported by Frederick Bruckman)

2004-06-17 v0.27:
  * Cache file format change, so switch default NGETHOME to ~/.nget5.
    (Upgrade should be as simple as "mv ~/.nget4 ~/.nget5; rm ~/.nget5/*,cache*")
  * Don't store fileid codes in the cache file, instead calculate them when needed. (Can halve size of gzipped cache files.)
  * Change fileid calculation for single-part posts to include the message-id, fixes problem with multiple posts with the same subject/author not downloading when using -K.
  * Support IPv6 if available. (Can force off with configure --disable-ipv6)
  * If a hostname resolves to multiple ip addresses, try as many as needed to find one that works.
  * Add NGETRC environment variable to specify alternate config file directly.
  * Extend removal of identical dupe downloaded files to also cover incomplete/broken files. (Based on patch from Bram)